rmv some images and update structure

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -78,7 +78,7 @@ features:
     enable: false
   repository:
     url: ''
-    content_dir: content
+    content_dir: posts
     branch: main
 
 i_am_a_sponsor: true
