--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -2,7 +2,7 @@
 
 # Appearance
 appearance:
-  mode: system
+  mode: dark
   color: orange
 
 # SEO
@@ -10,7 +10,7 @@ marketing:
   seo:
     site_type: ResearchOrganization
     local_business_type: ''
-    org_name: 'NAME'
+    org_name: 'Kairos.fm'
     description: "Making the world's complex problems accessible."
     twitter: ''
   analytics:
@@ -45,7 +45,7 @@ header:
 footer:
   block: minimal
   copyright:
-    notice: '© {year} NAME. This work is licensed under {license}'
+    notice: '© {year} Kairos.fm. This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: true
