--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -45,7 +45,7 @@ header:
 footer:
   block: minimal
   copyright:
-    notice: '© {year} Kairos.fm. This work is licensed under {license}'
+    notice: '© {year} Kairos.fm | This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: true
