add ai companions article

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -22,7 +22,7 @@ main:
     pageRef: about/
     weight: 30
   - name: Collections
-    pageRef: tags/
+    pageRef: categories/
     weight: 40
   # - name: Content
   #   pageRef: content/
